// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`global-styles should render global styles 1`] = `
<head>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    html{line-height:1.15;-webkit-text-size-adjust:100%;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    body{margin:0;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    main{display:block;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    h1{font-size:2em;margin:.67em 0;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    hr{box-sizing:content-box;height:0;overflow:visible;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    pre{font-family:monospace,monospace;font-size:1em;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    a{background-color:transparent;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    abbr[title]{border-bottom:none;-webkit-text-decoration:underline;text-decoration:underline;-webkit-text-decoration:underline dotted;text-decoration:underline dotted;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    b,strong{font-weight:bolder;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    code,kbd,samp{font-family:monospace,monospace;font-size:1em;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    small{font-size:80%;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    sub{bottom:-.25em;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    sup{top:-.5em;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    img{border-style:none;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    button,input{overflow:visible;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    button,select{text-transform:none;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    [type=button],[type=reset],[type=submit],button{-webkit-appearance:button;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    [type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    [type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:1px dotted ButtonText;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    fieldset{padding:.35em .75em .625em;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    progress{vertical-align:baseline;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    textarea{overflow:auto;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    [type=checkbox],[type=radio]{box-sizing:border-box;padding:0;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    [type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    [type=search]{-webkit-appearance:textfield;outline-offset:-2px;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    [type=search]::-webkit-search-decoration{-webkit-appearance:none;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    ::-webkit-file-upload-button{-webkit-appearance:button;font:inherit;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    details{display:block;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    summary{display:-webkit-box;display:-webkit-list-item;display:-ms-list-itembox;display:list-item;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    [hidden],template{display:none;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    html{box-sizing:border-box;font-size:100%;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    *,*:before,*:after{box-sizing:inherit;}
  </style>
</head>
`;

exports[`global-styles should render global styles with @font-face rules 1`] = `
<head>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    html{line-height:1.15;-webkit-text-size-adjust:100%;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    body{margin:0;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    main{display:block;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    h1{font-size:2em;margin:.67em 0;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    hr{box-sizing:content-box;height:0;overflow:visible;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    pre{font-family:monospace,monospace;font-size:1em;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    a{background-color:transparent;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    abbr[title]{border-bottom:none;-webkit-text-decoration:underline;text-decoration:underline;-webkit-text-decoration:underline dotted;text-decoration:underline dotted;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    b,strong{font-weight:bolder;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    code,kbd,samp{font-family:monospace,monospace;font-size:1em;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    small{font-size:80%;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    sub{bottom:-.25em;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    sup{top:-.5em;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    img{border-style:none;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    button,input{overflow:visible;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    button,select{text-transform:none;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    [type=button],[type=reset],[type=submit],button{-webkit-appearance:button;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    [type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    [type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:1px dotted ButtonText;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    fieldset{padding:.35em .75em .625em;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    progress{vertical-align:baseline;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    textarea{overflow:auto;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    [type=checkbox],[type=radio]{box-sizing:border-box;padding:0;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    [type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    [type=search]{-webkit-appearance:textfield;outline-offset:-2px;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    [type=search]::-webkit-search-decoration{-webkit-appearance:none;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    ::-webkit-file-upload-button{-webkit-appearance:button;font:inherit;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    details{display:block;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    summary{display:-webkit-box;display:-webkit-list-item;display:-ms-list-itembox;display:list-item;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    [hidden],template{display:none;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    html{box-sizing:border-box;font-size:100%;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    *,*:before,*:after{box-sizing:inherit;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    @font-face{font-family:"ReithSans";src:url("https://gel.files.bbci.co.uk/r2.511/BBCReithSans_W_Rg.woff2") format("woff2"),url("https://gel.files.bbci.co.uk/r2.511/BBCReithSans_W_Rg.woff") format("woff");font-display:optional;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    @font-face{font-family:"ReithSerif";src:url("https://gel.files.bbci.co.uk/r2.511/BBCReithSerif_W_Md.woff2") format("woff2"),url("https://gel.files.bbci.co.uk/r2.511/BBCReithSerif_W_Md.woff") format("woff");font-weight:500;font-display:optional;}
  </style>
</head>
`;
